--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,8 @@
   ],
   "browser_action": {
      "default_icon": {
-        "19": "build/images/icon19.png",
-        "38": "build/images/icon38.png"
+        "19": "build/images/gray/icon19.png",
+        "38": "build/images/gray/icon38.png"
      },
      "default_title": "Save to Ona it Later"
   },
@@ -28,8 +28,8 @@
   ],
   "options_page": "build/views/views/options.html",
   "icons": {
-    "16": "build/images/icon19.png",
-    "48": "build/images/icon48.png",
-    "128": "build/images/icon128.png"
+    "16": "build/images/blue/icon19.png",
+    "48": "build/images/blue/icon48.png",
+    "128": "build/images/blue/icon128.png"
   }
 }
