--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.0.1",
     "gulp-watch": "^1.0.4",
+    "gulp-zip": "^3.0.2",
     "intelli-espower-loader": "^0.6.0",
     "power-assert": "^0.10.2",
     "require-dir": "^0.1.0",
