--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Save_to_Ona_it_Later",
-  "version": "0.2.10",
+  "name": "Save_to_Kawpaa",
+  "version": "0.3.0",
   "description": "",
   "author": "eiurur",
   "license": "MIT",
