--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Save to Kawpaa",
   "description": "あとで抜く",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "permissions": [
     "tabs",
     "storage",
@@ -11,6 +11,13 @@
     "http://*/*",
     "https://*/*",
     "chrome://favicon/"
+  ],
+  "content_scripts": [
+    {
+      "matches": [ "https://twitter.com/*" ],
+      "js": [ "build/js/vendors/lib.js", "build/js/insertSaveButton2Twitter.js" ],
+      "run_at": "document_end"
+    }
   ],
   "browser_action": {
      "default_icon": {
@@ -21,8 +28,8 @@
   },
   "background": {
      "persistent": false,
-     "//": [ "build/js/vendors/lib.js", "build/js/background.js" ],
-     "scripts": [ "build/js/vendors/lib.min.js", "build/js/background.min.js" ]
+     "scripts": [ "build/js/vendors/lib.js", "build/js/background.js" ],
+     "//": [ "build/js/vendors/lib.min.js", "build/js/background.min.js" ]
   },
   "web_accessible_resources": [
     "bower_components/jquery/dist/jquery.min.map"
