--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Save to Kawpaa",
   "description": "あとで抜く",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "permissions": [
     "tabs",
     "storage",
@@ -28,8 +28,8 @@
   },
   "background": {
      "persistent": false,
-     "//": [ "build/js/vendors/lib.js", "build/js/background.js" ],
-     "scripts": [ "build/js/vendors/lib.min.js", "build/js/background.min.js" ]
+     "scripts": [ "build/js/vendors/lib.js", "build/js/background.js" ],
+     "//": [ "build/js/vendors/lib.min.js", "build/js/background.min.js" ]
   },
   "web_accessible_resources": [
     "bower_components/jquery/dist/jquery.min.map"
