--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-csslint": "^0.1.5",
     "gulp-cssmin": "^0.1.7",
     "gulp-jade": "^1.0.1",
+    "gulp-json-editor": "^2.2.1",
     "gulp-load-plugins": "^0.6.0",
     "gulp-mocha": "^2.0.1",
     "gulp-ng-annotate": "^0.4.3",
@@ -36,7 +37,8 @@
     "power-assert": "^0.10.2",
     "require-dir": "^0.1.0",
     "rimraf": "^2.2.8",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "yargs": "^4.2.0"
   },
   "scripts": {
     "setup": "npm i & bower i & gulp build",
