[Implement] - Support danbooru

--- a/manifest.json
+++ b/manifest.json
@@ -12,20 +12,36 @@
     "https://*/*",
     "chrome://favicon/"
   ],
-  "content_scripts": [{
-    "matches": [
-      "https://twitter.com/*"
-    ],
-    "//": [
-      "build/js/vendors/lib.js",
-      "build/js/insertSaveButton2Twitter.js"
-    ],
-    "js": [
-      "build/js/vendors/lib.min.js",
-      "build/js/insertSaveButton2Twitter.min.js"
-    ],
-    "run_at": "document_end"
-  }],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://twitter.com/*"
+      ],
+      "//": [
+        "build/js/vendors/lib.js",
+        "build/js/insertSaveButton2Twitter.js"
+      ],
+      "js": [
+        "build/js/vendors/lib.min.js",
+        "build/js/insertSaveButton2Twitter.min.js"
+      ],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://danbooru.donmai.us/posts/*"
+      ],
+      "//": [
+        "build/js/vendors/lib.js",
+        "build/js/insertSaveLink2Danbooru.js"
+      ],
+      "js": [
+        "build/js/vendors/lib.min.js",
+        "build/js/insertSaveLink2Danbooru.min.js"
+      ],
+      "run_at": "document_end"
+    }
+  ],
   "browser_action": {
     "default_icon": {
       "19": "build/images/gray/icon19.png",
