[Add] - Tokenを自動的に保存する処理

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,28 @@
     "https://*/*",
     "chrome://favicon/"
   ],
-  "content_scripts": [{
+  "content_scripts": [
+  {
+    "matches": [
+      "https://kawpaa.eiurur.xyz/"
+    ],
+    "js": [
+      "build/js/vendors/lib.min.js",
+      "build/js/retrieveToken.min.js"
+    ],
+    "run_at": "document_end"
+  },
+  {
+    "matches": [
+      "https://kawpaa.eiurur.xyz/account"
+    ],
+    "js": [
+      "build/js/vendors/lib.min.js",
+      "build/js/retrieveToken.min.js"
+    ],
+    "run_at": "document_end"
+  },
+  {
     "matches": [
       "https://twitter.com/*"
     ],
@@ -25,7 +46,8 @@
       "build/js/insertSaveButton2Twitter.min.js"
     ],
     "run_at": "document_end"
-  }, {
+  },
+  {
     "matches": [
       "https://tweetdeck.twitter.com/*"
     ],
@@ -38,7 +60,8 @@
       "build/js/insertSaveButton2TweetDeck.min.js"
     ],
     "run_at": "document_end"
-  }, {
+  },
+  {
     "matches": [
       "https://www.tumblr.com/*"
     ],
@@ -51,7 +74,8 @@
       "build/js/insertSaveButton2Tumblr.min.js"
     ],
     "run_at": "document_end"
-  }, {
+  },
+  {
     "matches": [
       "https://chan.sankakucomplex.com/*/post/show/*",
       "https://danbooru.donmai.us/posts/*",
