[Optimize] - gulp task for coffee

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "espower-loader": "^0.10.0",
     "gulp": "^3.8.8",
     "gulp-bower": "0.0.6",
+    "gulp-cached": "^1.1.0",
+    "gulp-changed": "^1.3.0",
     "gulp-coffee": "^2.2.0",
     "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.4.1",
@@ -26,6 +28,7 @@
     "gulp-open": "^0.3.0",
     "gulp-pleeease": "^1.0.4",
     "gulp-plumber": "^0.6.6",
+    "gulp-remember": "^0.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-sourcemaps": "^1.2.4",
