--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Save to Kawpaa",
   "description": "あとで抜く",
-  "version": "0.9.3",
+  "version": "0.10.0",
   "permissions": [
     "tabs",
     "storage",
@@ -98,8 +98,9 @@
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+H",
-        "mac": "MacCtrl+Shift+H"
+        "default": "Ctrl+I",
+        "windows": "Ctrl+I",
+        "mac": "Command+I"
       }
     }
   }
