[Fix] - dont work in http://danbooru.donmai.us

--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,7 @@
   }, {
     "matches": [
       "https://chan.sankakucomplex.com/*/post/show/*",
-      "https://danbooru.donmai.us/posts/*",
+      "*://danbooru.donmai.us/posts/*",
       "http://*.deviantart.com/art/*",
       "http://gelbooru.com/index.php*",
       "https://konachan.com/post/show/*",
