--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
+    "babili": "0.0.10",
     "cross-env": "^3.1.4",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-react": "^6.9.0",
     "espower-loader": "^0.10.0",
     "gulp": "^3.8.8",
+    "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.4.1",
@@ -57,8 +59,8 @@
     "start": "node node_modules\\gulp\\bin\\gulp",
     "build": "node node_modules\\gulp\\bin\\gulp build",
     "zip": "cross-env NODE_ENV=production node node_modules\\gulp\\bin\\gulp zip",
-    "major": "npm run zip --version major",
-    "minor": "npm run zip --version minor",
-    "patch": "npm run zip --version patch"
+    "major": "cross-env NODE_ENV=production node node_modules\\gulp\\bin\\gulp zip --version major",
+    "minor": "cross-env NODE_ENV=production node node_modules\\gulp\\bin\\gulp zip --version minor",
+    "patch": "cross-env NODE_ENV=production node node_modules\\gulp\\bin\\gulp zip --version patch"
   }
 }
