--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Save to Kawpaa",
   "description": "あとで抜く",
-  "version": "0.11.10",
+  "version": "0.11.11",
   "permissions": [
     "tabs",
     "storage",
@@ -19,8 +19,8 @@
       "https://www.tumblr.com/*",
       "https://chan.sankakucomplex.com/*/post/show/*",
       "*://danbooru.donmai.us/posts/*",
-      "http://*.deviantart.com/art/*",
-      "http://gelbooru.com/index.php*",
+      "*://*.deviantart.com/art/*",
+      "https://gelbooru.com/*",
       "https://konachan.com/post/show/*",
       "https://www.pixiv.net/member_illust.php*",
       "https://yande.re/post/show/*"
