--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "save-to-kawpaa",
-  "version": "0.11.20",
+  "version": "0.11.21",
   "description": "",
   "author": "eiurur",
   "license": "MIT",
   "dependencies": {
     "alertifyjs": "^1.10.0",
-    "axios": "^0.17.1",
-    "bootstrap": "^3.3.7",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
     "jquery": "^3.2.1",
     "require-all": "^2.2.0",
     "handlebars": "~> 4.0.0"
@@ -28,36 +28,36 @@
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-concat": "^2.6.1",
-    "gulp-copy": "1.0.1",
+    "gulp-copy": "1.1.0",
     "gulp-csslint": "^1.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-json-editor": "^2.2.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.0.0",
-    "gulp-open": "^2.0.0",
+    "gulp-open": "^3.0.0",
     "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
-    "gulp-remember": "^0.3.1",
+    "gulp-remember": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-strip-debug": "^1.1.0",
+    "gulp-strip-debug": "^3.0.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^4.3.11",
+    "gulp-watch": "^5.0.0",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^4.0.0",
-    "uglify-js": "~> 2.6.0",
-    "require-dir": "^0.3.2",
+    "require-dir": "^1.0.0",
     "rimraf": "^2.6.1",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^3.0.0",
-    "yargs": "^10.0.3"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "yargs": "^11.0.0"
   },
   "scripts": {
     "setup": "npm i && npm run build",
     "start": "concurrently \"gulp\" \"webpack --progress --colors --watch\"",
-    "build": "gulp build && webpack --config webpack.production.config.js ",
+    "build": "gulp build && webpack -p ",
     "zip": "gulp zip",
     "version:remain": "npm run build && gulp zip",
     "version:major": "npm run build && gulp zip --version major",
