--- a/package.json
+++ b/package.json
@@ -5,59 +5,57 @@
   "author": "eiurur",
   "license": "MIT",
   "dependencies": {
-    "alertifyjs": "^1.10.0",
+    "alertifyjs": "^1.11.1",
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.2.1",
-    "require-all": "^2.2.0",
-    "handlebars": "~> 4.0.0"
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "require-all": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babili": "0.1.4",
-    "concurrently": "^3.4.0",
-    "eslint": "^4.0.0",
+    "concurrently": "^3.5.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.7.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-cached": "^1.1.1",
-    "gulp-changed": "^3.1.0",
+    "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "1.1.0",
-    "gulp-csslint": "^1.0.0",
+    "gulp-csslint": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
-    "gulp-json-editor": "^2.2.1",
+    "gulp-json-editor": "^2.3.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-open": "^3.0.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-open": "^3.0.1",
     "gulp-pleeease": "^2.0.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.3.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-pug": "^4.0.1",
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-debug": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
     "gulp-webpack": "^1.5.0",
-    "gulp-zip": "^4.0.0",
+    "gulp-zip": "^4.1.0",
     "require-dir": "^1.0.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
     "yargs": "^11.0.0"
   },
   "scripts": {
     "setup": "npm i && npm run build",
-    "start":
-      "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
+    "start": "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
     "build": "gulp build && webpack -p ",
     "zip": "gulp zip",
     "version:remain": "npm run build && gulp zip",
