pixivの複数枚のイラストページだと保存ボタンが被る

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.11.1",
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.2.0",
@@ -46,6 +46,7 @@
     "gulp-watch": "^5.0.1",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^4.2.0",
+    "natives": "^1.1.6",
     "require-dir": "^1.2.0",
     "rimraf": "^2.6.2",
     "vinyl-source-stream": "^2.0.0",
