--- a/package.json
+++ b/package.json
@@ -5,33 +5,31 @@
   "author": "eiurur",
   "license": "MIT",
   "dependencies": {
-    "alertifyjs": "^1.11.2",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
+    "alertifyjs": "^1.11.3",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "babili": "0.1.4",
     "concurrently": "^4.1.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-react": "^7.11.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
+    "eslint-plugin-react": "^7.13.0",
+    "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
-    "gulp-changed": "^3.2.0",
+    "gulp-changed": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
-    "gulp-json-editor": "^2.4.4",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-json-editor": "^2.5.2",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-notify": "^3.2.0",
     "gulp-open": "^3.0.1",
     "gulp-pleeease": "^2.0.2",
@@ -40,19 +38,18 @@
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-debug": "^3.0.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "gulp-webpack": "^1.5.0",
-    "gulp-zip": "^4.2.0",
-    "natives": "^1.1.6",
+    "gulp-zip": "^5.0.0",
     "require-dir": "^1.2.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.3",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "yargs": "^12.0.5"
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "yargs": "^13.2.4"
   },
   "scripts": {
     "setup": "npm i && npm run build",
