--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "alertifyjs": "^1.13.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-react": "^7.19.0",
@@ -29,7 +29,7 @@
     "gulp-csslint": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-json-editor": "^2.5.4",
-    "gulp-load-plugins": "^2.0.2",
+    "gulp-load-plugins": "^2.0.3",
     "gulp-notify": "^3.2.0",
     "gulp-open": "^3.0.1",
     "gulp-pleeease": "^2.0.2",
@@ -37,7 +37,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-debug": "^3.0.0",
     "gulp-uglify": "^3.0.2",
@@ -47,12 +47,13 @@
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "yargs": "^15.3.0"
+    "yargs": "^15.3.1"
   },
   "scripts": {
     "setup": "npm i && npm run build",
+    "update:dep": "npx ncu -u && npm i && npm audit fix",
     "start": "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
     "build": "gulp build && webpack -p ",
     "zip": "gulp zip",
