--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "setup": "npm i && npm run build",
     "update:dep": "npx ncu -u && npm i && npm audit fix",
     "start": "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
+    "dev": "npm run start",
     "build": "gulp build && webpack -p ",
     "zip": "gulp zip",
     "version:remain": "npm run build && gulp zip",
