--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "update:dep": "npx ncu -u && npm i && npm audit fix",
     "start": "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
     "dev": "npm run start",
-    "build": "gulp build && webpack -p ",
+    "build": "gulp build && webpack --mode production",
     "zip": "gulp zip",
     "version:remain": "npm run build && gulp zip",
     "version:major": "npm run build && gulp zip --versions major",
