--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react": "^7.21.5",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.2",
@@ -47,14 +47,14 @@
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "yargs": "^16.0.3"
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "yargs": "^16.1.0"
   },
   "scripts": {
     "setup": "npm i && npm run build",
     "update:dep": "npx ncu -u && npm i && npm audit fix",
-    "start": "concurrently \"gulp\" \"webpack --mode development --progress --colors --watch\"",
+    "start": "concurrently \"gulp\" \"webpack --mode development --progress --color --watch\"",
     "dev": "npm run start",
     "build": "gulp build && webpack --mode production",
     "zip": "gulp zip",
