--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "license": "MIT",
   "dependencies": {
     "alertifyjs": "^1.13.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "concurrently": "^5.3.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-react": "^7.24.0",
+    "concurrently": "^7.0.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-react": "^7.28.0",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.3",
@@ -30,26 +30,27 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-json-editor": "^2.5.6",
     "gulp-load-plugins": "^2.0.7",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^4.0.0",
     "gulp-open": "^3.0.1",
     "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.2.1",
-    "gulp-pug": "^4.0.1",
+    "gulp-pug": "^5.0.0",
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-strip-debug": "^3.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-strip-debug": "^4.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^5.1.0",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.49.7",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "yargs": "^16.2.0"
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "yargs": "^17.3.1"
   },
   "scripts": {
     "setup": "npm i && npm run build",
