--- a/package.json
+++ b/package.json
@@ -9,26 +9,30 @@
   },
   "dependencies": {
     "alertifyjs": "^1.13.1",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "async": "^3.2.3",
+    "babel-loader": "^8.2.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "concurrently": "^7.0.0",
-    "eslint": "^8.11.0",
+    "clean-css": "^5.3.0",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react": "^7.29.4",
+    "glob": "^8.0.1",
+    "glob-parent": "^6.0.2",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.3",
     "gulp-concat": "^2.6.1",
-    "gulp-copy": "4.0.1",
+    "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-json-editor": "^2.5.6",
@@ -42,15 +46,18 @@
     "gulp-strip-debug": "^4.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
-    "gulp-webpack": "^1.5.0",
+    "gulp-webpack": "^0.0.1",
     "gulp-zip": "^5.1.0",
+    "lodash.template": "^4.5.0",
+    "meow": "^10.1.2",
+    "minimist": "^1.2.6",
     "require-dir": "^1.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.9",
+    "sass": "^1.51.0",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^5.70.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "yargs": "^17.3.1"
+    "yargs": "^17.4.1"
   },
   "scripts": {
     "setup": "npm i && npm run build",
