--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "babel-loader": "^8.2.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "clean-css": "^5.3.0",
     "concurrently": "^7.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -31,10 +30,10 @@
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.3",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
-    "gulp-cssmin": "^0.2.0",
     "gulp-json-editor": "^2.5.6",
     "gulp-load-plugins": "^2.0.7",
     "gulp-notify": "^4.0.0",
@@ -46,7 +45,6 @@
     "gulp-strip-debug": "^4.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
-    "gulp-webpack": "^0.0.1",
     "gulp-zip": "^5.1.0",
     "lodash.template": "^4.5.0",
     "meow": "^10.1.2",
